--- a/dev/index.html
+++ b/dev/index.html
@@ -14,11 +14,11 @@
             <h1>Let's get started!</h1>
             <nav>
                 <h2>Contents</h2>
-                <a href="/">Startup</a>
-                <a href="/bind-sync">Bind & Sync</a>
-                <a href="/fetch-replace">Fetch & Replace</a>
-                <a href="/stores">Stores</a>
-                <a href="/components">Components</a>
+                <a href="/dev/index.html">Startup</a>
+                <a href="/dev/bind-sync.html">Bind & Sync</a>
+                <a href="/dev/fetch-replace.html">Fetch & Replace</a>
+                <a href="/dev/stores.html">Stores</a>
+                <a href="/dev/components.html">Components</a>
             </nav>
             <section id="about">
                 <h2>What is Copper?</h2>
