Styling example page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/dev/assets/root.css">
     <title>Document</title>
 </head>
-<body>
-    <form method="get" action="/dev/index.html">
-        <button type="submit">Go to test</button>
-    </form>
+<body>   
+    <section class="fullpage-hero">
+        <h1>Manifold</h1>
+        <h2>No-nonsense front-end templating and reactivity</h2>
+        <nav>
+            <a href="/dev/index.html">Quick Start</a>
+            <a href="/dev/templating.html">Tutorials</a>
+            <a href="/dev/reactivity.html">Docs</a>
+        </nav>
+    </section>
+
+    <dialog open>
+        <header>
+            <h2>Howdy</h2>
+            <div class="buttons">
+                <button>Close</button>
+            </div>
+        </header>
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque doloribus aperiam velit quam recusandae quos saepe debitis maiores! Incidunt totam vero adipisci, dolor voluptate perferendis aspernatur illum nisi earum?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In eaque doloribus aperiam velit quam recusandae quos saepe debitis maiores! Incidunt totam vero adipisci, dolor voluptate perferendis aspernatur illum nisi earum?</p>
+        </section>
+        <footer>Whatevs</footer>
+    </dialog>
 </body>
 </html>
