Refactor, happy-dom mocking

--- a/dev/mycomponent.html
+++ b/dev/mycomponent.html
@@ -6,7 +6,7 @@
 <template id="new-component">
     <div>This is my template!!!</div>
     <mf-templ eval="$st.store1 as s">
-        <div>Reactivity 1: {$s}</div>
+        <div>Reactivity 1: ${s}</div>
     </mf-templ>
     <slot></slot>
 
