--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         <footer>Whatevs</footer>
     </dialog>
 
-    <script type="module">
+    <script type="module" class="mf-register">
         import { registerModals } from '/dev/scripts/modals.js';
         registerModals();
     </script>
+    <script type="module" class="mf-register"></script>
 </body>
 </html>
