--- a/index.html
+++ b/index.html
@@ -3,52 +3,59 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/dev/assets/root.css" />
-		<title>Document</title>
+		<link rel="stylesheet" href="/fe-assets/style.css" />
+		<title>Manifold UI tests</title>
 	</head>
+	<script type="module">
+		// @ts-check
+		import $ from "./src/index.ts";
+		let myStore = $.watch(32);
+		let chickenStore = $.watch(0);
+		let myStore2 = $.watch(() => {
+			return {
+				name: "Jake",
+				age: myStore.value,
+				chickens: chickenStore.value,
+			};
+		});
+
+		myStore.effect((value) => {
+			console.log("myStore changed:", myStore.value);
+		});
+		myStore2.effect((value) => {
+			console.log("myStore2 changed:", myStore2.value);
+		});
+
+		setTimeout(() => {
+			myStore.value = 36;
+		}, 1000);
+
+		setTimeout(() => {
+			myStore.value = 37;
+
+			setInterval(() => {
+				myStore.value++;
+			}, 3000);
+		}, 3000);
+
+		$.input("#chickens-input", () => {
+			return {
+				value: chickenStore.value,
+				onchange: (e) => {
+					chickenStore.value = +e.target.value;
+				},
+				style: {
+					border: `1px solid rgb(${chickenStore.value},0,0)`,
+				},
+			};
+		});
+	</script>
 	<body>
-		<section class="fullpage-hero">
-			<h1>Manifold</h1>
-			<h2>
-				Front-end templating and reactivity with no build requirement
-				and no nonsense
-			</h2>
-			<nav>
-				<a class="modal-trigger" href="#quickstart">The Pitch</a>
-				<a class="modal-trigger" href="#quickstart">Quick Start</a>
-				<a href="/dev/templating.html">Tutorials</a>
-				<a href="/dev/reactivity.html">Docs</a>
-			</nav>
-		</section>
-
-		<dialog id="quickstart">
-			<header>
-				<h2>Howdy</h2>
-				<div class="buttons">
-					<button class="closer">Close</button>
-				</div>
-			</header>
-			<section>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-					eaque doloribus aperiam velit quam recusandae quos saepe
-					debitis maiores! Incidunt totam vero adipisci, dolor
-					voluptate perferendis aspernatur illum nisi earum?
-				</p>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. In
-					eaque doloribus aperiam velit quam recusandae quos saepe
-					debitis maiores! Incidunt totam vero adipisci, dolor
-					voluptate perferendis aspernatur illum nisi earum?
-				</p>
-			</section>
-			<footer>Whatevs</footer>
-		</dialog>
-
-		<script type="module" class="mf-register">
-			import { registerModals } from "/dev/scripts/modals.js";
-			registerModals();
-		</script>
-		<script type="module" class="mf-register"></script>
+		<h1>Manifold</h1>
+		<h2>Test UI Hooks</h2>
+		<form>
+			<label for="chickens-input">Chickens:</label>
+			<input id="chickens-input" type="number" />
+		</form>
 	</body>
 </html>
