Setting up to better track each iterations

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 			/>
 
 			<mf-each id="chicken-button-list" data-as="val, i">
-				<template>
-					<button id="chickens-bulk">+ Lots o' chickens ${i}</button>
-				</template>
+				<template> + Lots o' chickens ${i} </template>
 			</mf-each>
 		</form>
 	</body>
