--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			/>
 
 			<mf-each id="chicken-button-list" data-as="val, i">
-				<template> + Lots o' chickens ${i} </template>
+				<template> + Lots o' chickens ${i} ${val}</template>
 			</mf-each>
 		</form>
 	</body>
