--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 			/>
 		</form>
 		<div>CHICKEN 5 SAYS: <span data-mf="chicken-5"></span></div>
+		<mf-if data-mf="is-even">
+			<div>EVEN CHICKENS!!!!</div>
+		</mf-if>
 		<br />
 		<ul>
 			<mf-each data-mf="chicken-button-list" data-mf-as="val, i">
