Working well - about to branch

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 		<mf-if data-mf="is-even">
 			<div>EVEN CHICKENS!!!!</div>
 		</mf-if>
+		<mf-else-if data-mf="is-3">
+			<div>THREE chickens!(</div>
+		</mf-else-if>
+		<mf-else-if data-mf="is-5">
+			<div>FIVE chickens!</div>
+		</mf-else-if>
+		<mf-else>
+			<div>ODD CHICKENS!</div>
+		</mf-else>
 		<br />
 		<ul>
 			<mf-each data-mf="chicken-button-list" data-mf-as="val, i">
