--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/fe-assets/style.css" />
 		<title>Manifold UI tests</title>
 	</head>
-	<script type="module" src="/fe-assets/viewmodelscript.ts"></script>
+	<!-- <script type="module" src="/fe-assets/viewmodelscript.ts"></script> -->
 	<body>
 		<h2>Test UI Hooks</h2>
 		<form>
