--- a/esTest.html
+++ b/esTest.html
@@ -64,8 +64,7 @@
 
 		<!-- Import Manifold -->
 		<script type="module">
-			import { State } from "./src/State.js";
-			import { RegEl } from "./src/registry.js";
+			import { State, RegEl } from "./dist/manifold.es.js";
 
 			// Initialize test states
 			window.userState = new State({
