--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<body>
 		<h1>Registry Test - data-scope</h1>
 
-		<span id="test-el-2" data-scope="@counter">
+		<span id="test-el-2" data-bind="textContent: 'Counter is ' + @counter">
 			Counter is ${counter}!
 		</span>
 
@@ -66,7 +66,11 @@
 			<h2>Element Registry Test</h2>
 			<p>Testing data-scope prop binding and logging</p>
 
-			<div id="test-element" data-scope="@user, @counter as count">
+			<div
+				id="test-element"
+				data-if="@user as me !== undefined"
+				data-scope="@user, @counter as count"
+			>
 				Test element with scoped props
 			</div>
 
