--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
 			Counter (aliased as count) is greater than 5:
 			<span id="counter-display"></span>
 		</div>
+		<div
+			id="test-el-44"
+			data-scope="@counter as count"
+			data-elseif="@count > 1"
+		>
+			Counter (aliased as count) is greater than 1 BOI:
+			<span id="counter-display"></span>
+		</div>
+		<div
+			id="test-el-55"
+			data-scope="@counter as count"
+			data-else="@count > 5"
+		>
+			Counter (aliased as count) is 0 or 1 or something really low:
+			<span id="counter-display"></span>
+		</div>
 
 		<div id="test-el-4" data-scope="@user.name as name">
 			User name (aliased): <span data-bind="textContent: @name"></span>
@@ -112,8 +128,11 @@
 				const testElement3 = document.getElementById("test-el-3");
 				RegEl.register(testElement3);
 
-				const testElement4 = document.getElementById("test-el-4");
-				RegEl.register(testElement4);
+				const testElement44 = document.getElementById("test-el-44");
+				RegEl.register(testElement44);
+
+				const testElement55 = document.getElementById("test-el-55");
+				RegEl.register(testElement55);
 
 				console.log("Element registered:", testRegEl);
 			});
